DemoEnvironments/aws-istio-certmanager/new-november-2025/01-apache-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mike-apache
  namespace: tls-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mike-apache
  template:
    metadata:
      labels:
        app: mike-apache
    spec:
      serviceAccountName: mike-apache-sa
      automountServiceAccountToken: true
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mike-apache-svc
  namespace: tls-apache
spec:
  type: ClusterIP
  selector:
    app: mike-apache
  ports:
  - name: http
    port: 80
    targetPort: 80

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mike-public-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - mike.tlsguru.io
    # Keep HTTP open so ACME HTTP-01 can complete
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - mike.tlsguru.io
    tls:
      mode: SIMPLE
      credentialName: mike-tlsguru-io-tls   # must exist in istio-system
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mike-apache
  namespace: tls-apache
spec:
  hosts:
  - mike.tlsguru.io
  gateways:
  - istio-system/mike-public-gw   # <-- fix
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mike-apache-svc.tls-apache.svc.cluster.local
        port:
          number: 80
