DemoEnvironments/aws-istio-certmanager/new-november-2025/03-istio-gateway-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mike-public-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - mike.tlsguru.io
    # Keep HTTP open so ACME HTTP-01 can complete
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - mike.tlsguru.io
    tls:
      mode: SIMPLE
      credentialName: mike-tlsguru-io-tls   # must exist in istio-system
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mike-apache
  namespace: tls-apache
spec:
  hosts:
  - mike.tlsguru.io
  gateways:
  - istio-system/public-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mike-apache-svc.tls-apache.svc.cluster.local
        port:
          number: 80
